components.css
/* ... */
dialog[is="fig-dialog"] {
  --z-index: 999999;
  z-index: var(--z-index);

  &[autoresize]:not([autoresize="false"]) {
    height: max-content;
  }

  &[resizable]:not([resizable="false"]) {
    resize: both;
    overflow: auto;
    min-width: 12rem;
    min-height: 6rem;
  }
  & > iframe{
    border-radius: 0 0 var(--dialog-radius) var(--dialog-radius);
    overflow: hidden;
    border: none;
  }
}

dialog[is="fig-popup"] {
  --z-index: 999999;
  --fig-popup-beak-offset: 50%;
  --fig-popup-beak-width: 1rem;
  --fig-popup-beak-height: 6px;
  --fig-popup-radius: var(--radius-large);
  --fig-popup-bg-color: var(--figma-color-bg);
  --fig-popup-tip-clip-path: path(
    "M16 0H0L0 1H0.757359C1.55301 1 2.31607 1.31607 2.87868 1.87868L6.29587 5.29587C7.23704 6.23704 8.76296 6.23704 9.70413 5.29587L13.1213 1.87868C13.6839 1.31607 14.447 1 15.2426 1H16V0Z"
  );

  z-index: var(--z-index);
  position: fixed;
  margin: 0;
  min-width: 0;
  padding: 0;
  overflow: auto;
  border-radius: var(--fig-popup-radius);
  background-color: var(--fig-popup-bg-color);

  &[autoresize]:not([autoresize="false"]) {
    width: max-content;
    max-width: calc(100vw - var(--spacer-4));
    max-height: calc(100vh - var(--spacer-4));
  }

  &[open] {
    display: block;
  }

  

  &[theme="dark"] {
    color-scheme: dark;
    --fig-popup-bg-color: var(--figma-color-bg);
  }

  &[theme="light"] {
    color-scheme: light;
  }

  &[theme="brand"],
  &[theme="canvas"] {
    --fig-popup-bg-color: var(--figma-color-bg-brand);
    color-scheme: dark;
  }

  &[theme="menu"] {
    --fig-popup-bg-color: var(--figma-color-bg-menu);
    color: var(--figma-color-text-menu);
    color-scheme: dark;
    padding: var(--spacer-2) 0;
    min-width: 6rem;
    box-shadow: var(--figma-elevation-100);
  }

  &[variant="tooltip"],
  &[variant="popover"] {
    overflow: visible;
    box-shadow: inset 0 0.5px 0 0 rgba(255, 255, 255, 0.1);
    filter: drop-shadow(0px 1px 1.5px rgba(0, 0, 0, 0.1))
      drop-shadow(0px 2.5px 6px rgba(0, 0, 0, 0.13))
      drop-shadow(0px 0px 0.5px rgba(0, 0, 0, 0.15));

    &:after {
      content: "";
      background-color: inherit;
      clip-path: var(--fig-popup-tip-clip-path);
      position: absolute;
      width: var(--fig-popup-beak-width);
      height: var(--fig-popup-beak-height);
      z-index: 2;
      pointer-events: none;
    }

    &[data-beak-side="bottom"]:after {
      top: calc(100% - 1px);
      left: var(--fig-popup-beak-offset, 50%);
      transform: translateX(-50%);
    }

    &[data-beak-side="top"]:after {
      top: 1px;
      left: var(--fig-popup-beak-offset, 50%);
      transform: translate(-50%, -100%) scaleY(-1);
    }

    &[data-beak-side="left"]:after {
      left: var(--fig-popup-beak-height);
      top: var(--fig-popup-beak-offset, 50%);
      transform: translate(-100%, -50%) rotate(90deg);
    }

    &[data-beak-side="right"]:after {
      left: calc(100% - var(--fig-popup-beak-height));
      top: var(--fig-popup-beak-offset, 50%);
      transform: translate(0, -50%) rotate(-90deg);
    }
  }
  &[variant="tooltip"] {
    --fig-popup-radius: var(--radius-medium, 0.3125rem);
    --fig-popup-tip-clip-path: var(--tip-pointer);

    color: var(--figma-color-text);
    line-height: 1rem !important;
    max-width: 180px;
    width: max-content;
    padding: 0;
    min-width: 0;
    box-shadow: inset 0 0.5px 0 0
    light-dark(rgba(0, 0, 0, 0.06), rgba(255, 255, 255, 0.1));
    filter: drop-shadow(0px 1px 1.5px rgba(0, 0, 0, 0.1))
      drop-shadow(0px 2.5px 6px rgba(0, 0, 0, 0.13))
      drop-shadow(0px 0px 0.5px rgba(0, 0, 0, 0.15));
    pointer-events: none;

    & > span {
      text-wrap: balance;
      max-height: 2.5rem;
      overflow-y: hidden;
      display: -webkit-box;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
      line-clamp: 2;
      text-overflow: ellipsis;
      width: auto;
      padding: var(--spacer-1) var(--spacer-2);
    }
    &[theme="canvas"]{
      --fig-popup-radius: 3px;
      box-shadow: none;
      filter: none;
      & > span{
        padding: 0.125rem 0.375rem;
      }
    }

    &[pointer="false"]::after {
      display: none !important;
    }
  }

}

/* Tooltip */
fig-tooltip {
  display: contents;
}

fig-preview {
  --fig-preview-fit: contain;

  display: block;
  place-items: center;
  min-width: 0;
  max-width: 100%;
  background-color: var(--figma-color-bg-secondary);
  border-radius: var(--radius-medium);
  position: relative;
  overflow: hidden;

  &[full]:not([full="false"]) {
    width: 100%;
  }

  &[checkerboard]:not([checkerboard="false"]) {
    background: var(--checkerboard);
  }

  &::after {
    content: "";
    position: absolute;
    inset: 0;
    border-radius: inherit;
    box-shadow: inset 0 0 0 1px var(--figma-color-bordertranslucent);
    pointer-events: none;
    z-index: 2;
  }

  > :is(img, video, canvas, svg) {
    display: block;
    width: stretch;
    height: stretch;
    object-fit: var(--fig-preview-fit);
    object-position: center;
  }
}

/* Web Components */
fig-button,
fig-content,
fig-slider,
fig-switch,
fig-input-color,
fig-input-gradient,
fig-input-fill,
fig-checkbox,
fig-radio,
fig-tab,
fig-segmented-control,
fig-input-palette {
  display: inline-flex;
  gap: var(--spacer-2);
  user-select: none;

  &[full]:not([full="false"]) {
    display: flex;
    width: 100%;
  }
}

fig-dropdown {
  &[full]:not([full="false"]) {
    display: flex;
    width: 100%;
  }
}

fig-checkbox,
fig-radio {
  
  align-items: center;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;

  & label span {
    vertical-align: middle;
  }
}

fig-switch {
  align-items: center;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

fig-input-color {
  --alpha: 1;
}
/* ... */

